# beautygrowth-ai

./: .env.example  .gitignore  contextoChatGPT.md  docker-compose.yml  package-lock.json  package.json
frontend/: tsconfig.app.json  vitest.config.ts
frontend/src/: App.tsx  index.css  (+1 more)
langgraph-service/: Dockerfile  Makefile  pyproject.toml
langgraph-service/proto/: agent_orchestration.proto
langgraph-service/src/: __init__.py  __main__.py
langgraph-service/src/core/: agent_router.py  exceptions.py  graph_builder.py  image_clients.py  llm_clients.py  parallel_executor.py  tenant_context.py  token_tracker.py  workflow_engine.py
langgraph-service/src/grpc/: __init__.py  health_check.py  interceptors.py  server.py
langgraph-service/src/models/: __init__.py  schemas.py
langgraph-service/src/workflows/: __init__.py  content_agent.py  designer_agent.py
langgraph-service/tests/: __init__.py  conftest.py  test_agent_router.py  test_cancel_execution.py  test_designer_agent_load_context.py  test_designer_agent_negative_prompts.py  test_designer_edit_context.py  test_designer_fallback_retry_scenarios.py  test_designer_guardrails_retry_block.py  test_designer_post_process_thumbnail.py  test_designer_structured_log.py  test_designer_timeout_constants.py  test_designer_upload_and_persist.py  test_designer_workflow_wiring.py  test_generate_content.py  test_grpc_interceptors.py  test_node_failure_and_guardrails.py  test_parallel_executor.py  test_resolve_prompt.py  test_state_manager.py
src/: app.controller.spec.ts  app.service.ts  main.ts
test/: jest-e2e.json
(+560 files in other folders)
