[project]
name = "langgraph-service"
version = "0.1.0"
description = "LangGraph Orchestration Service for Beauty Growth AI"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "redis[hiredis]>=5.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-grpc>=0.43b0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.92.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
